@@ -5,8 +5,6 @@ For 1.4:
 
    Make sure unknown texture types are handled (for adding gradients)
    Profile 1.3.4 vs. 1.3.5 on unaccelerated config
-   Export selected (??)
-   Copy/paste does not account for multiple bone joints, texture projections, etc...
    Texture paint segfault
       Segfault (dvh bb post on 8/18)
    Attract near/far
@@ -14,7 +12,7 @@ For 1.4:
       2D/3D
       Curve: linear/sin/log/quad
 
-   Test merge on multiple bone joint assignments (and points)
+   Test merge on multiple bone joint assignments, points, and projections
 
 For 1.6:
    Resample animation
